allow public to search doctor and allow doctor to view their appointments
