# backend/app/openapi.json
@@ -491,59 +491,6 @@
       }
     },
     "/admin/doctors": {
-      "get": {
-        "summary": "List doctors",
-        "description": "List doctors",
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ],
-        "parameters": [
-          {
-            "in": "query",
-            "name": "firstname",
-            "schema": {
-              "type": "string"
-            },
-            "description": "Filter by doctor's first name"
-          },
-          {
-            "in": "query",
-            "name": "lastname",
-            "schema": {
-              "type": "string"
-            },
-            "description": "Filter by doctor's last name"
-          },
-          {
-            "in": "query",
-            "name": "workplace",
-            "schema": {
-              "type": "string"
-            },
-            "description": "Filter by doctor's workplace"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "A list of doctors",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/DoctorDTO"
-                  }
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        }
-      },
       "post": {
         "summary": "Create a new doctor",
         "description": "Create a new doctor",
@@ -995,6 +942,276 @@
         "responses": {
           "204": {
             "description": "Schedule deleted successfully"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/doctor/appointments": {
+      "get": {
+        "summary": "List appointments",
+        "description": "List appointments",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "startDate",
+            "schema": {
+              "type": "string"
+            },
+            "required": false,
+            "description": "The start date of the appointment"
+          },
+          {
+            "in": "query",
+            "name": "endDate",
+            "schema": {
+              "type": "string"
+            },
+            "required": false,
+            "description": "The end date of the appointment"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "return a list of appointments based on the query"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/doctor/appointments/{appointmentId}": {
+      "get": {
+        "summary": "Get an appointment by ID",
+        "description": "Get an appointment by ID",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "appointmentId",
+            "schema": {
+              "type": "string"
+            },
+            "required": true,
+            "description": "The appointment ID"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "return the appointment",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AppointmentDTO"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not found"
+          }
+        }
+      },
+      "put": {
+        "summary": "Update an appointment",
+        "description": "Update an appointment",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "appointmentId",
+            "schema": {
+              "type": "string"
+            },
+            "required": true,
+            "description": "The appointment ID"
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateAppointmentDTO"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "return the updated appointment",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AppointmentDTO"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/doctor/appointments/{appointmentId}/reschedule": {
+      "post": {
+        "summary": "Reschedule an appointment",
+        "description": "Reschedule an appointment",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "appointmentId",
+            "schema": {
+              "type": "string"
+            },
+            "required": true,
+            "description": "The appointment ID"
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "ScheduleId"
+                ],
+                "properties": {
+                  "ScheduleId": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Appointment rescheduled successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AppointmentDTO"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/doctor/appointments/{appointmentId}/cancel": {
+      "post": {
+        "summary": "Cancel an appointment",
+        "description": "Cancel an appointment",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "appointmentId",
+            "schema": {
+              "type": "string"
+            },
+            "required": true,
+            "description": "The appointment ID"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "return the cancelled appointment",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AppointmentDTO"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/doctor/appointments/{appointmentId}/complete": {
+      "post": {
+        "summary": "Complete an appointment",
+        "description": "Complete an appointment",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "appointmentId",
+            "schema": {
+              "type": "string"
+            },
+            "required": true,
+            "description": "The appointment ID"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "return the completed appointment"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not found"
           },
           "500": {
             "description": "Internal server error"
@@ -1497,6 +1714,56 @@
                         "type": "string"
                       }
                     }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/public/doctors": {
+      "get": {
+        "summary": "List doctors",
+        "description": "List doctors",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "firstname",
+            "schema": {
+              "type": "string"
+            },
+            "description": "Filter by doctor's first name"
+          },
+          {
+            "in": "query",
+            "name": "lastname",
+            "schema": {
+              "type": "string"
+            },
+            "description": "Filter by doctor's last name"
+          },
+          {
+            "in": "query",
+            "name": "workplace",
+            "schema": {
+              "type": "string"
+            },
+            "description": "Filter by doctor's workplace"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A list of doctors",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/DoctorDTO"
                   }
                 }
               }
